fixing spacing

--- a/web/src/styles/UpdateAvailability.css
+++ b/web/src/styles/UpdateAvailability.css
@@ -1,14 +1,53 @@
-.update-availability {
+body, html {
     background-color: #EDE7E3;
     font-family: Katibeh;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     height: 10vh;
 }
 
-.center-content {
-    background-color: #F8F8F8;
+.update-title {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+h1 {
+    color: #49423E;
+    text-align: left;
+    font-family: Katibeh;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin: 0;
+}
+
+h2 {
+    font-size: 50px;
+    color: #47413d;
+    font-family: Katibeh;
+    margin-top: 0;
+    margin-bottom: auto;
+    text-align: center;
+}
+
+h3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 25px;
+}
+
+.logo-container {
+    margin-left: 10px;
+    margin-top: 10px;
+}
+
+.logo {
+    width: 50px;
+    height: auto;
+    margin-left: 10px;
 }
 
 .form-container {
@@ -24,53 +63,42 @@
     margin-bottom: 20px;
 }
 
-.update-availability h2 {
-    font-size: 50px;
-    color: #47413d;
-}
 
-.update-availability h3 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: 20px;
-}
-
-.update-availability div {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-}
-
-.update-availability form {
+form {
     color: #000000;
-
 }
 
-.update-availability div {
+.availabilities div {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
 }
 
-.update-availability label {
+.availabilities .start {
+    align-items: center;
+    color: blue;
+}
+
+label {
     margin-right: 10px;
     margin-left: 10px;
+    padding-right: 10px;
     display: flex;
     align-items: center;
+    height: 30px;
 }
 
-.update-availability::after {
+::after {
     content: "";
     display: table;
     clear: both;
 }
 
-.update-availability select {
+select {
     width: 150px;
     margin-bottom: 5px;
     margin-top: 2px;
-    margin-right: 5px;
+    /* margin-right: 5px; */
     background-color: #CDBFB6;
     color: #49423E;
     border: 2px solid #000000;
@@ -80,21 +108,12 @@
     font-size: 15px;
 }
 
-.update-availability select[name="position"] {
+select[name="position"] {
     margin-left: 10px;
 }
 
-.update-availability select,
-.update-availability input[type="checkbox"] {
-    margin-right: q0px;
-}
-
-.logo {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    width: 50px;
-    height: auto;
+select, input[type="checkbox"] {
+    margin-right: 10px;
 }
 
 /* checkbox */
@@ -126,16 +145,9 @@ input[type="checkbox"]:checked::before {
 .dropdown-container {
     display: flex;
     justify-content: center;
-    border-bottom: 2px solid #000000;
-    padding-bottom: 5px;
 }
 
-/* .availAdjust {
-    border-bottom: 2px solid #000000;
-    padding-bottom: 5px;
-} */
-
-.update-availability button {
+button {
     background-color: #B1947B;
     color: #000000;
     font-family: Katibeh;
@@ -150,3 +162,14 @@ input[type="checkbox"]:checked::before {
     line-height: 35px;
 }
 
+.background-square {
+    background-color: #F8F8F8;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    max-width: 600px;
+    box-shadow: 5px 0 10px rgba(0, 0, 0, 0.1);
+}
